# DPOS-MGP

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  IMPORTANT.md  README.md  ltn.doxygen.in  ltnio.version.in  pipeline.jsonc  testnet.template
.cicd/: build.sh  generate-pipeline.sh  installation-build.sh  submodule-regression-check.sh
CMakeModules/: LtnioTester.cmake.in  LtnioTesterBuild.cmake.in  MASSigning.cmake  additionalPlugins.cmake  doxygen.cmake  installer.cmake  ltnio-config.cmake.in  package.cmake
boot_scripts/: 01_create_wallet.py  03_create_system_accounts.py  04_set_initial_contracts.py  05_create_sys_token.py  06_set_system.py  07_premine.py  08_create_staked_accounts.py  09_reg_producers copy.py  10_start_producers.py  11_vote.py  12_claim_reward.py  13_proxy_vote.py  14_resign.py  15_get_nodeos_logs.py  16_propose_transfer.py  17_approve_transfer.py  18_execute_transfer.py  19_unstake_team_reward.py  boot.sh  config.toml  genesis.json  utils.py
debian/: postinst
plugins/: COMMUNITY.md  ltnio-make_new_plugin.sh
programs/: CMakeLists.txt
programs/ltnio-blocklog/: CMakeLists.txt  main.cpp
scripts/: .build_vars  .environment  CMakeLists.txt  generate_bottle.sh  generate_tarball.sh  ltnio-tn_bounce.sh  ltnio-tn_down.sh  ltnio-tn_roll.sh  ltnio-tn_up.sh  ltnio_build.sh  ltnio_build_amazonlinux.sh  ltnio_build_centos.sh  ltnio_build_darwin.sh  ltnio_build_ubuntu.sh  ltnio_install.sh  ltnio_uninstall.sh
tests/: CMakeLists.txt  Cluster.py  Node.py  TestHelper.py  WalletMgr.py  chain_plugin_tests.cpp  consensus-validation-malicious-producers.py  (+30 more)
(+341 files in other folders)
